--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^2.0.0",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "cors": "*",
-    "vue": "^3.2.13",
+    "vue": "^3.4.25",
+    "vue-qrcode": "^2.2.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -22,7 +24,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
