--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0",
+    "@vuepic/vue-datepicker": "^8.6.0",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "cors": "*",
